--- a/style.css
+++ b/style.css
@@ -111,59 +111,114 @@ button{
 
 }
 @media screen and (max-width: 600px) {
-    #hero {
-        width: 180%;
-        height: 200vh;
-    }
-    .navbar {
-        width: 80;
-    }
-    .navbar .logo {
-        width: 250px;
-        transform: translateX(-365px);
-    }
-    .user{
-        transform: translateX(-30px);
-        transform: translateY(-40px);
-    }
-    .user img {
-        width: 100px;
-        transform: translateX(-10px);
-    }
-    button {
-        padding: 8px 20px;
-        transform: translateX(20px);
-    }
-    .container {
-        width: 40%;
-        height: 200vh;
-    }
-    .info {
-        width: 60px;
-        right: -15px;
-    }
-    .info h1 {
-        font-size: 60px;
-    }
-    .info input {
-        width: 150%;
-        font-size: 15px;
-    }
-    .slider {
-        right: 100px;
-        bottom: 225px;
-    }
-    #prev, #next {
-        width: 60px;
-    }
-    .preview {
-        margin: 0 20px;
-    }
-    .preview img {
-        width: 50px;
-        margin: 0 5px;
-    }
-    .preview .active {
-        width: 60px;
-    }
+
+    #hero{
+        width: 120%;
+        height: 120vh;
+        background-image:url(bg1.png) ;
+        background-size: cover;
+        background-position: center;
+        position: relative;
+        }
+        .navbar{
+            width: 80%;
+            margin: auto;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            position: relative;
+            z-index: 10;
+        }
+        .navbar .logo{
+            width: 140px;
+            margin: 30px 0;
+            position: relative;
+            cursor: pointer;
+            transform: translateX(-20px);
+        }
+        .user{
+            display: flex;
+            align-items: center;
+            transform: translateX(-30px);
+            transform: translateY(-40px);
+        }
+        .user img{
+            width: 40px;
+            margin-left: 50px;
+            cursor: pointer;
+            transform: translateX(30px);
+        }
+        button{
+            padding: 4px 18px;
+            background: transparent;
+            outline: none;
+            border: 2px solid #fff;
+            border-radius: 20px;
+            color: #fff;
+            font-size: 12px;
+            font-weight: bold;
+            cursor: pointer;
+            transform: translateX(60px);
+        }
+        .container{
+            width: 40%;
+            height: 120vh;
+            background: rgba(86, 86, 86, 0.3);
+            backdrop-filter: blur(10px);
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+        .info{
+            width: 60px;
+            color: #fff;
+            position: relative;
+            right: -15px;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+        .info h1{
+            font-size: 30px;
+            letter-spacing: 2px;
+        }
+        .info input{
+            width: 150%;
+            padding: 8px 10px;
+            outline: none;
+            border: 2px solid #00ff15;
+            border-radius: 20px;
+            background: transparent;
+            color: #721111;
+            font-size: 15px;
+        }
+        ::placeholder{
+            color: #ff0000;
+        }
+        .slider{
+            display: flex;
+            align-items: center;
+            position: absolute;
+            right: 15px;
+            bottom: 100px;
+        }
+        #prev, #next{
+            width: 30px;
+            cursor: pointer;
+        }
+        .preview{
+            display: flex;
+            align-items: center;
+            margin: 0 20px;
+        }
+        .preview img{
+            width: 20px;
+            margin: 0 5px;
+            opacity: 0.6;
+        }
+        .preview .active{
+            display: block;
+            border: 3px solid #fff;
+            width: 60px;
+            opacity: 1;
+}
 }
