--- a/style.css
+++ b/style.css
@@ -21,10 +21,38 @@ position: relative;
     z-index: 10;
 }
 .navbar .logo{
-    width: 180px;
+    width: 200px;
     margin: 30px 0;
-    position: relative;
+    position: absolute;
     cursor: pointer;
+    top: 1px;
+}
+.navbar ul li{
+    list-style: none;
+    display: inline;
+    position: relative;
+    padding-right:  70px;
+    left: 400px;
+}
+.navbar ul li a {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: larger;
+    text-decoration: dotted;
+    color: #ff6600;
+    text-transform: uppercase;
+}
+.navbar ul li::after{
+    content: '';
+    height: 3px;
+    width: 0;
+    background: #0db49e;
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+    transition: 0.5s;
+}
+.navbar ul li:hover::after{
+    width: 65%;
 }
 .user{
     display: flex;
@@ -34,8 +62,9 @@ position: relative;
 }
 .user img{
     width: 60px;
-    margin-left: 50px;
+    margin-left: 60px;
     cursor: pointer;
+    transform: translateY(90px);
 }
 button{
     padding: 8px 25px;
@@ -47,6 +76,7 @@ button{
     font-size: 12px;
     font-weight: bold;
     cursor: pointer;
+    transform: translateY(90px);
 }
 .container{
     width: 25%;
@@ -110,6 +140,7 @@ button{
     opacity: 1;
 
 }
+
 @media screen and (max-width: 600px) {
 
     #hero{
@@ -130,11 +161,39 @@ button{
             z-index: 10;
         }
         .navbar .logo{
-            width: 140px;
+            width: 170px;
             margin: 30px 0;
             position: relative;
             cursor: pointer;
             transform: translateX(-20px);
+        }
+        .navbar ul li{
+            list-style: none;
+            display: inline;
+            position: relative;
+            padding-right:  160px;
+            left: 40px;
+            top: 200px;
+        }
+        .navbar ul li a {
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: 22px;
+            text-decoration: dotted;
+            color: #fffb00;
+            text-transform: uppercase;
+        }
+        .navbar ul li::after{
+            content: '';
+            height: 3px;
+            width: 0;
+            background: #b40d0d;
+            position: absolute;
+            left: 0;
+            bottom: 15px;
+            transition: 0.5s;
+        }
+        .navbar ul li:hover::after{
+            width: 70%;
         }
         .user{
             display: flex;
