--- a/style.css
+++ b/style.css
@@ -146,6 +146,7 @@ button{
     #hero{
         width: 100%;
         height: 100vh;
+        overflow-x: hidden;
         background-image:url(bg1.png) ;
         background-size: cover;
         background-position: center;
@@ -165,19 +166,19 @@ button{
             margin: 20px 0;
             position: relative;
             cursor: pointer;
-            transform: translateX(-9px);
+            transform: translateX(-25px);
         }
         .navbar ul li{
             list-style: none;
             display: inline;
             position: relative;
             padding-right:  160px;
-            left: 40px;
-            top: 218px;
+            left: -10px;
+            top: 170px;
         }
         .navbar ul li a {
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 22px;
+            font-size: 17px;
             text-decoration: dotted;
             color: #fffb00;
             text-transform: uppercase;
@@ -205,7 +206,7 @@ button{
             width: 40px;
             margin-left: 50px;
             cursor: pointer;
-            transform: translateX(-20px);
+            transform: translateX(-150px);
         }
         button{
             padding: 4px 18px;
@@ -217,7 +218,7 @@ button{
             font-size: 12px;
             font-weight: bold;
             cursor: pointer;
-            transform: translateX(20px);
+            transform: translateX(-110px);
         }
         .container{
             width: 40%;
@@ -229,15 +230,15 @@ button{
             top: 0;
         }
         .info{
-            width: 60px;
+            width: 50px;
             color: #fff;
             position: relative;
-            right: -15px;
+            right: -10px;
             top: 50%;
             transform: translateY(-50%);
         }
         .info h1{
-            font-size: 30px;
+            font-size: 20px;
             letter-spacing: 2px;
         }
         .info input{
@@ -257,20 +258,20 @@ button{
             display: flex;
             align-items: center;
             position: absolute;
-            right: 15px;
+            right: 5px;
             bottom: 100px;
         }
         #prev, #next{
-            width: 30px;
+            width: 20px;
             cursor: pointer;
         }
         .preview{
             display: flex;
             align-items: center;
-            margin: 0 20px;
+            margin: 0 2px;
         }
         .preview img{
-            width: 20px;
+            width: 15px;
             margin: 0 5px;
             opacity: 0.6;
         }
